--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -33,6 +33,8 @@ th {
 
 th, td {
   border-inline-end: 1px solid black;
+  padding-block: 3px;
+  padding-inline: 5px;
 }
 
 @media (min-width: 480px) {
