--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,9 +1,10 @@
 :root {
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 body {
-  padding: 0.5em;
+  padding: 20px;
   margin-block: 0;
   margin-inline: auto;
 }
@@ -21,20 +22,8 @@ p {
   line-height: 1.35;
 }
 
-table {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-
-th {
-  text-align: start;
-  border-block-end: 1px solid black;
-}
-
-th, td {
-  border-inline-end: 1px solid black;
-  padding-block: 3px;
-  padding-inline: 5px;
+button {
+  cursor: pointer;
 }
 
 @media (min-width: 480px) {
