--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -22,6 +22,12 @@ p {
   line-height: 1.35;
 }
 
+#spinner {
+  position: fixed;
+  left: 20px;
+  top: 20px;
+}
+
 @media (min-width: 480px) {
   h1 {
     max-width: none;
