--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -25,8 +25,11 @@ h3 {
 
 .loading {
   position: fixed;
+  padding: 5px;
   left: 20px;
-  top: 20px;
+  top: 10px;
+  background-color: white;
+  border-radius: 4px;
 }
 
 .fa-icon {
