--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -33,6 +33,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 textarea {
   padding-block: 2px;
   padding-inline: 2px;
+  font-family: sans-serif;
 }
 
 button {
