--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -14,6 +14,10 @@ body {
   max-width: min(1000px, 100vw);
 }
 
+a:link, a:visited, a:hover {
+  color: #3232fa;
+}
+
 h2 {
   font-size: 1.5em;
   font-weight: bold;
@@ -54,6 +58,11 @@ button {
 
 .fa-icon {
   vertical-align: middle;
+  margin-inline: 5px;
+
+  &.hidden {
+    visibility: hidden;
+  }
 }
 
 // svelecte
