--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -76,4 +76,8 @@ button {
   .sv-control.is-active {
     box-shadow: 0 0 0 1px #015fcc;
   }
+
+  .sv-control:not(.is-active) {
+    border: 1px solid #767676 !important;
+  }
 }
