begin cleaning up css and using scss mixins

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -65,6 +65,20 @@ button {
   }
 }
 
+.borrowed {
+  color: crimson;
+  a {
+    color: inherit;
+  }
+}
+
+.inherited {
+  color: purple;
+  a {
+    color: inherit;
+  }
+}
+
 // svelecte
 
 .svelecte-control {
