more css cleanup

--- a/app/src/mixins.scss
+++ b/app/src/mixins.scss
@@ -1,5 +1,6 @@
-$lightgray: #e0e0e0;
-$lightergray: #e8e8e8;
+$icon_hover: gray;
+$light_gray: #e0e0e0;
+$lighter_gray: #e8e8e8;
 $item_sep: 20px;
 
 @mixin hr {
