--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -30,6 +30,10 @@ h3 {
   margin-block: 1em;
 }
 
+ul {
+  list-style: none;
+}
+
 input[type="text"], input[type="password"], input[type="email"] {
   padding-block: 1px;
   padding-inline: 2px;
