--- a/app/src/mixins.scss
+++ b/app/src/mixins.scss
@@ -1,7 +1,13 @@
+$error_background_color: #f8d7da;
+$error_border_color: #f5c6cb;
+$error_color: #721c24;
 $icon_hover: gray;
+$item_sep: 20px;
 $light_gray: #e0e0e0;
 $lighter_gray: #e8e8e8;
-$item_sep: 20px;
+$success_background_color: #d4edda;
+$success_border_color: #c3e6cb;
+$success_color: #155724;
 
 @mixin hr {
   hr {
@@ -29,4 +35,24 @@ $item_sep: 20px;
 @mixin indent-small {
   padding-inline-start: 0.75em;
   text-indent: -0.75em;
+}
+
+@mixin error_color {
+  color: $error_color;
+  background-color: $error_background_color;
+  border-color: $error_border_color;
+}
+
+@mixin success_color {
+  color: $success_color;
+  background-color: $success_background_color;
+  border-color: $success_border_color;
+}
+
+@mixin popover {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 4px 4px 8px gray;
+  font-size: 14px;
 }
