compare page improvements; inherited/borrowed coloring cleanup

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -61,9 +61,12 @@ button {
 }
 
 .fa-icon {
+  color: black;
   vertical-align: middle;
   margin-inline: 5px;
-
+  &:hover {
+    color: gray;
+  }
   &.hidden {
     visibility: hidden;
   }
