add clear button to search forms; add language edit page; add support for prefer_set_name; source edit page fixes and cleanup

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -49,6 +49,11 @@ button {
   margin-inline-start: 16px;
   padding-block: 1px;
   padding-inline: 6px;
+
+  &.delete {
+    margin-block-start: 3em;
+    margin-inline-start: 0;
+  }
 }
 
 .loading {
