--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,3 +1,5 @@
+@import 'src/mixins.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -46,7 +48,6 @@ textarea {
 }
 
 button {
-  margin-inline-start: 16px;
   padding-block: 1px;
   padding-inline: 6px;
 
@@ -54,6 +55,10 @@ button {
     margin-block-start: 3em;
     margin-inline-start: 0;
   }
+}
+
+form {
+  @include button-right;
 }
 
 .loading {
