use css vars instead of sass vars

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -9,6 +9,16 @@
 :root {
   font-family: sans-serif;
   font-size: 16px;
+
+  --error-background-color: #f8d7da;
+  --error-border-color: #f5c6cb;
+  --error-color: #721c24;
+  --item-sep: 20px;
+  --light-gray: #e0e0e0;
+  --lighter-gray: #e8e8e8;
+  --success-background-color: #d4edda;
+  --success-border-color: #c3e6cb;
+  --success-color: #155724;
 }
 
 body {
@@ -84,7 +94,7 @@ form {
 
 .notfound {
   font-style: italic;
-  margin-block: $item_sep;
+  margin-block: var(--item-sep);
 }
 
 .borrowed {
