use Arial when available

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -7,7 +7,7 @@
 }
 
 :root {
-  font-family: sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
 
   --error-background-color: #f8d7da;
