--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -19,6 +19,7 @@
   --success-background-color: #d4edda;
   --success-border-color: #c3e6cb;
   --success-color: #155724;
+  --text-max-width: 1000px;
 }
 
 body {
