--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -174,6 +174,17 @@ form {
     white-space: unset;
   }
 
+  .marker-small {
+    font-size: 8px;
+    padding-inline: 3px;
+    padding-block: 0;
+    width: max-content;
+    max-width: 12em;
+    border: transparent;
+    border-radius: 3px;
+    white-space: unset;
+  }
+
   .leaflet-marker-icon > svg {
     width: 12px;
     height: 12px;
