working infix-in-reflex

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -119,6 +119,16 @@ form {
   }
 }
 
+.infix {
+  font-weight: normal;
+  &::before {
+    content: '‹';
+  }
+  &::after {
+    content: '›';
+  }
+}
+
 // svelecte
 
 .svelecte {
