improve toolboxMarkup html generation; restore class="lang" on gloss language indication

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -99,6 +99,10 @@ form {
   margin-block-start: var(--item-sep);
 }
 
+.lang {
+  font-style: italic;
+}
+
 .borrowed {
   color: #dc143c; // crimson
   a {
